# aion

./: .gitignore  .gitmodules  Cargo.toml
src/: id.rs  lib.rs
src/id/: event_id.rs  mod.rs  system_id.rs
src/parameters/: mod.rs
src/parameters/injections/: arc_mutex.rs  local.rs  mod.rs  optional.rs  owned.rs  shared.rs  take.rs  unique.rs
src/plugin/: mod.rs
src/scheduler/: builder.rs  events.rs  interrupts.rs  mod.rs  phase.rs  system_event.rs  tick_future.rs
src/scheduler/accesses/: access.rs  access_map.rs  mod.rs
src/scheduler/blacklists/: blacklist.rs  mod.rs
src/scheduler/execution_graph/: mod.rs  ordering.rs  panic_safe_graphs.rs
src/scheduler/resources/: mod.rs  new_resources.rs  resource_wrapper.rs
src/scheduler/resources/resource_map/: access_checked_resource_map.rs  inner_resource_map.rs  mod.rs
src/scheduler/resources/system_resource/: mod.rs  system_resource_ptr.rs
src/scheduler/tick/: current_tick.rs  lifetime.rs  mod.rs
src/systems/: mod.rs  system_cell.rs  system_flag.rs  system_status.rs
src/systems/async_system/: into_async.rs  mod.rs
src/systems/stored_system/: inner_stored_system.rs  mod.rs
src/systems/sync_system/: into_sync.rs  mod.rs
